# zikzira

./: .gitignore  CMakeLists.txt  README.md  TODO.md  VERSIONS.txt  assets.c  assets.h  gameloop.c  gameloop.h  gameplay.c  gameplay.h  gameplay.txt  input.c  input.h  key_delay.c  key_delay.h  key_delays.c  key_delays.h  main.c  main.h  music.c  music.h  renderer.c  renderer.h  sound.c  sound.h  sprite.c  sprite.h  sprite_anim.c  sprite_anim.h  utils.c  utils.h  window.c  window.h
gameplay/: gameplay.c  gameplay.h
gameplay shared/: gps_assets.c  gps_assets.h  gps_board.c  gps_board.h  gps_format.c  gps_format.h
gameplay_shared/: gps_assets.c  gps_assets.h  gps_board.c  gps_board.h  gps_context.c  gps_context.h  gps_format.c  gps_format.h  gps_input_keys.c  gps_input_keys.h  gps_utils.c  gps_utils.h
gemaplay/: gameplay.c  gameplay.h
input/: joystick.c  joystick.h  keyboard.c  keyboard.h  keyboard_delay.c  keyboard_delay.h  mouse.c  mouse.h
res/: res.rc  resource.h.in  resource.rc.in
